fixed a issue where the video height was stuck at 800 px displacing the video controlls

--- a/client/src/scss/pages/singleProjectPage.scss
+++ b/client/src/scss/pages/singleProjectPage.scss
@@ -17,6 +17,7 @@
             }
             video {
                 max-width: 100%;
+                height: auto;
                 cursor: pointer;
                 margin-bottom: 1rem;
             }
